# sia

./: .gitmodules  CMakeLists.txt  README.md  alex_bench.cpp  alex_twitter.cpp  alex_ycsb.cpp  bench.cpp  cuckoo_bench.cpp  cuckoo_twitter.cpp  cuckoo_ycsb.cpp  dummy_thread.h  lock.h  test_config.h  twitter.cpp  wormhole_bench.cpp  wormhole_twitter.cpp  wormhole_ycsb.cpp  ycsb.cpp
alex/: README.md  alex.h  alex_base.h  alex_bg.h  alex_fanout_tree.h  alex_nodes.h
dataset/preprocessing/: amazon_convert.py  memetracker_convert.py  twitter_convert.py
dataset/preprocessing/twitter_cache_trace/: Makefile  make_load_trace.cpp  reformat.cpp  split_workload_trace.cpp
ideal/: sindex_group.h  sindex_group_impl.h  sindex_impl.h  sindex_root.h  sindex_root_impl.h
original/: sindex_group.h  sindex_group_impl.h  sindex_impl.h  sindex_root.h  sindex_root_impl.h
results/: Makefile
scripts/: latency_breakdown.py  lazy_delete.py  node_size.py  performance.py  request_dist.py
sia-accelerator/: .gitignore  build.sbt  build.sc
sia-accelerator/intel/mpf_codes/sw/: base_include.mk
sia-accelerator/intel/src/: .gitignore  copy_generated_rtl.sh
sia-accelerator/intel/testbench/float_tb/hw/: float_tb.json  float_tb.sv  sources.txt
sia-accelerator/intel/testbench/float_tb/sw/: Makefile  float_tb.cpp
sia-accelerator/intel/testbench/inner_loop_pe/hw/: inner_loop_pe_tb.json  inner_loop_pe_tb.sv  sources.txt
sia-accelerator/intel/testbench/inner_loop_pe/sw/: Makefile  inner_loop_pe_tb.cpp
sia-accelerator/intel/testbench/outer_loop_pe/hw/: outer_loop_pe_tb.json  outer_loop_pe_tb.sv  sources.txt
sia-accelerator/intel/testbench/outer_loop_pe/sw/: Makefile  outer_loop_pe_tb.cpp
sia-accelerator/intel/testbench/qrd_unit/: synth.sh
sia-accelerator/intel/testbench/qrd_unit/hw_te_1/: qrd_unit_tb.sv  sources.txt
sia-accelerator/intel/testbench/qrd_unit/hw_te_2/: cci_mpf_app_conf.vh  qrd_unit_tb.json  qrd_unit_tb.sv
sia-accelerator/intel/testbench/qrd_unit/hw_te_3/: qrd_unit_tb.sv
sia-accelerator/intel/testbench/qrd_unit/hw_te_4/: qrd_unit_tb.sv
sia-accelerator/intel/testbench/template/hw/: sources.txt  template_tb.json  template_tb.sv
sia-accelerator/intel/testbench/template/sw/: Makefile  template_tb.cpp
sia-accelerator/src/main/scala/: qrd_unit.scala
sia-accelerator/src/main/scala/floats/: float_add.scala  float_mult.scala  float_one_div.scala  float_sqrt.scala  float_type.scala  float_valid_warppers.scala
sia-accelerator/src/main/scala/floats/sqrt_table/: generate_table.py
sia-accelerator/src/main/scala/helpers/: helper_funcs.scala
sia-accelerator/src/main/scala/qrd_pe/: dot_product_tree.scala  get_first_reg.scala  inner_loop_pe.scala  outer_loop_pe.scala
sia-accelerator/src/main/scala/qrd_pu/: matrix_buffer.scala  qrd_pu.scala  r_matrix_buffer.scala  reflector_buffer.scala  scalar_register.scala
sia-accelerator/src/test/scala/: test_qrd_unit.scala
sia-accelerator/src/test/scala/floats/: test_float_add.scala  test_float_mult.scala  test_float_one_div.scala  test_float_sqrt.scala
sia-accelerator/src/test/scala/qrd_pe/: test_dot_product_tree.scala  test_inner_loop_pe.scala  test_outer_loop_pe.scala
sia-accelerator/src/test/scala/qrd_pu/: test_pu_buffers.scala  test_qrd_pu.scala
sia-hw/: helper.h  sia.hpp  sindex_group.h  sindex_group_impl.h  sindex_impl.h  sindex_model.h  sindex_root.h  sindex_root_impl.h  sindex_util.h
sia-sw/: sia.hpp  sindex.h  sindex_group.h  sindex_group_impl.h  sindex_impl.h  sindex_model.h  sindex_root.h  sindex_root_impl.h
